# wu

./: .gitignore  Cargo.toml
src/: main.rs  shader.wgsl
static/: index.html
